# freer-effects-extra

./: .gitignore  ChangeLog.md  LICENSE  README.md  freer-effects-extra.cabal  freer-extra.cabal  stack-lts-7.yaml
src/Control/Monad/Freer/: Base.hs  Catch.hs  Class.hs  Control.hs  Trans.hs
src/Control/Monad/Freer/Exception/: Extra.hs
src/Control/Monad/Freer/Reader/: Extra.hs
src/Control/Monad/Freer/State/: Extra.hs
