name:                   freer-extra
version:                0.1.0.0
synopsis:               TODO
description:            TODO
homepage:               TODO
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2016-2017 Peter Trško
category:               Control
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

library
  hs-source-dirs:      src
  exposed-modules:
      Control.Monad.Freer.Class
      Control.Monad.Freer.State.Extra
    , Control.Monad.Freer.Reader.Extra
  -- other-modules:

  build-depends:
      base >=4.9 && <4.10
    , freer ==0.2.*
    , transformers >=0.4 && <1
    -- ^ Version 0.4.0.0 introduced ExceptT and deprecated ErrorT.

  default-language:    Haskell2010
  other-extensions:
      DataKinds
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , MultiParamTypeClasses
    , NoImplicitPrelude
    , TypeFamilies
    , TypeOperators
