name:                   freer-extra
version:                0.1.0.0
synopsis:               Extra goodies for freer package.
description:
  Extra goodies for <https://hackage.haskell.org/package/freer freer> package.

homepage:               https://github.com/trskop/freer-extra
bug-reports:            https://github.com/trskop/freer-extra/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2016-2017 Peter Trško
category:               Control
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

library
  hs-source-dirs:       src
  exposed-modules:
      Control.Monad.Freer.Class
    , Control.Monad.Freer.Base
    , Control.Monad.Freer.Exception.Extra
    , Control.Monad.Freer.Reader.Extra
    , Control.Monad.Freer.State.Extra
  -- other-modules:

  build-depends:
      base >=4.9 && <4.10
    , exceptions >=0.6 && <0.9
    , freer-effects ==0.3.*
    , lens ==4.*
    , mtl >=1.1 && <3
    -- ^ Version 1.1.0.0 is the first one that introduced
    -- "Control.Monad.{Reader,State}.Class".
    , profunctors ==5.*
    , transformers >=0.4 && <1
    -- ^ Version 0.4.0.0 introduced ExceptT and deprecated ErrorT.
    , transformers-base ==0.4.*

  default-language:     Haskell2010
  other-extensions:
      DataKinds
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , MultiParamTypeClasses
    , NoImplicitPrelude
    , TypeFamilies
    , TypeOperators

  ghc-options:          -Wall
